RELEASE.md: Add '--add-opens' info for Nexus Staging 'rc:release'
Sonatype has not solved the problems in Nexus Staging Maven Plugin for
years, so it makes sense to document them.

Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>